<?xml version="1.0" encoding="UTF-8"?>
<resources>
    <string name="app_name">oral_health_application</string>
    <string name="loading">Loading?</string>
    <string name="no_internet_connection">No internet connection!</string>
    <string name="lbl_123123123123">123123123123</string>
    <string name="lbl_tratamento">TRATAMENTO</string>
    <string name="lbl_99_9_9999_9999">99 9 9999-9999</string>
    <string name="lbl_cancelar">Cancelar</string>
    <string name="msg_ultimo_atendime">Ultimo atendimento: 12 Set 23</string>
    <string name="lbl_comorbidades">Comorbidades</string>
    <string name="msg_feridas_que_dem">Feridas que demoram a cicatrizar?</string>
    <string name="lbl_recentes">Recentes</string>
    <string name="lbl_contato">Contato</string>
    <string name="msg_responda_os_que">Responda os question?rios a seguir para facilitar seu atendimento.</string>
    <string name="lbl_feminino">Feminino</string>
    <string name="msg_patologias_comp2">Patologias Compat?veis</string>
    <string name="msg_n_o_possui_uma">N?o possui uma conta? Cadastre-se!</string>
    <string name="msg_mordida_no_l_bi">Mordida no l?bio e trauma no rosto ou na boca s?o causas comuns. 
A mucocele ocorre com mais frequ?ncia em pessoas com menos de 20 anos de idade.
As mucoceles costumam aparecer no interior do l?bio inferior. Normalmente, s?o indolores e claras ou azuladas. Os tamanhos variam.
A mucocele costuma desaparecer sem tratamento. No entanto, ocasionalmente, a remo??o da gl?ndula salivar pode ser necess?ria.</string>
    <string name="msg_mirelle_fabiana">Mirelle Fabiana Barbosa Santos</string>
    <string name="lbl_40_anos">40 Anos</string>
    <string name="lbl_carcinoma">CARCINOMA</string>
    <string name="lbl_entrar">Entrar</string>
    <string name="lbl_mirelle_santos2">Mirelle Santos
</string>
    <string name="lbl_mirelle_santos">Mirelle Santos</string>
    <string name="msg_paciente_com_pr">Paciente com problemas renais?</string>
    <string name="msg_paciente_gestan">Paciente gestante?</string>
    <string name="lbl_cro_matr_cula">CRO/Matr?cula</string>
    <string name="lbl_bem_vindo">Bem vindo!</string>
    <string name="lbl_n_mero_atual">N?mero Atual</string>
    <string name="lbl_herpes">HERPES</string>
    <string name="msg_pesquisar_pacie">Pesquisar Pacientes</string>
    <string name="lbl_paulo_nunes">Paulo Nunes</string>
    <string name="lbl_22_anos2">22 anos</string>
    <string name="lbl_sintomas">SINTOMAS</string>
    <string name="msg_diab_tico_desco">Diab?tico descontrolado?</string>
    <string name="lbl_salvar">Salvar</string>
    <string name="lbl_nome_completo">Nome Completo</string>
    <string name="lbl_fechar">Fechar</string>
    <string name="lbl_repetir_senha">Repetir senha</string>
    <string name="msg_patologias_comp">Patologias Compat?veis
</string>
    <string name="msg_esqueceu_a_senh">Esqueceu a senha?</string>
    <string name="lbl_22_anos">22 Anos</string>
    <string name="lbl_senha">Senha</string>
    <string name="lbl_candid_ase">CANDID?ASE</string>
    <string name="msg_um_cisto_n_o_ca">Um cisto n?o cancer?geno na boca, repleto de muco.</string>
    <string name="msg_novo_atendiment">Novo atendimento</string>
    <string name="msg_fernandacabral">FernandaCabral@gmail.com</string>
    <string name="lbl_a_z">A - Z</string>
    <string name="msg_mirelle_santos">Mirelle Santos
Paciente Infantil
12 anos


Ultimo atendimento: 12 Set 23</string>
    <string name="lbl_sexo">Sexo</string>
    <string name="lbl_finalizar">Finalizar
</string>
    <string name="lbl_12_anos">12 Anos</string>
    <string name="msg_paciente_infant2">Paciente Infantil
12 anos
</string>
    <string name="msg_paciente_infant3">Paciente infantil?</string>
    <string name="lbl_99_999_999">99.999.999</string>
    <string name="msg_agora_vai_ficar">Agora vai ficar bem mais f?cil. Aqui est? seu resultado.</string>
    <string name="msg_edema_na_regi_o">Edema na regi?o?</string>
    <string name="lbl_herpangina">HERPANGINA</string>
    <string name="msg_cadastro_do_pac">Cadastro do Paciente</string>
    <string name="lbl_cadastre_se">Cadastre-se!</string>
    <string name="msg_ol_responda_o">Ol?! Responda os question?rios a seguir para facilitar seu atendimento.</string>
    <string name="lbl_paciente_jovem">Paciente Jovem</string>
    <string name="lbl_cadastrar">Cadastrar</string>
    <string name="msg_presen_a_de_bol">Presen?a de bolhas?</string>
    <string name="msg_hist_rico_de_qu">Hist?rico de Question?rios</string>
    <string name="msg_probabilidade_d">Probabilidade de 50%</string>
    <string name="lbl_cisto_mucoso">Cisto Mucoso</string>
    <string name="msg_esta_sentindo_f">Esta sentindo febre?</string>
    <string name="lbl_13_02_2011">13/02/2011</string>
    <string name="lbl_paciente_adulto">Paciente Adulto</string>
    <string name="msg_ultimo_atendime3">Ultimo atendimento: 20 Jun 23</string>
    <string name="msg_ultimo_atendime2">Ultimo atendimento: 30 Jun 23</string>
    <string name="lbl_z_a">Z - A</string>
    <string name="msg_paciente_infant">Paciente Infantil</string>
    <string name="lbl_bianca_alves">Bianca Alves</string>
    <string name="msg_ultimo_atendime6">
Ultimo atendimento: 12 Set 23</string>
    <string name="msg_ultimo_atendime5">Ultimo atendimento: 30 Jan 23</string>
    <string name="msg_ultimo_atendime4">Ultimo atendimento: 28 Abr 23</string>
    <string name="lbl_n_o">N?o</string>
    <string name="msg_n_o_possui_uma2">N?o possui uma conta? </string>
    <string name="lbl_sim">Sim</string>
    <string name="msg_paciente_asm_ti">Paciente asm?tico?</string>
    <string name="lbl">******</string>
    <string name="msg_a_seu_app_de_a">A seu app de 
atendimento f?cil.</string>
    <string name="lbl_rg">RG</string>
    <string name="lbl_obrigado">Obrigado! </string>
    <string name="msg_mobilidade_nos">Mobilidade nos dentes?</string>
    <string name="lbl_email">Email</string>
    <string name="msg_clique_para_sab">Clique para saber mais.</string>
    <string name="lbl_p_n_figo">P?N
FIGO</string>
    <string name="lbl_nova_senha">Nova Senha</string>
    <string name="msg_data_de_nascime">Data de nascimento</string>
    <string name="lbl_leucoplasia">LEUCOPLASIA</string>
    <string name="lbl_vis_o_geral">VIS?O GERAL</string>
    <string name="msg_obrigado_agora">Obrigado! Agora vai ficar bem mais f?cil. Aqui est? seu resultado.</string>
    <string name="lbl_999_999_999_992">999.999.999-99</string>
    <string name="msg_sente_uma_dor_l">Sente uma dor localizada?</string>
    <string name="msg_a_senha_precisa">A senha precisa ter 6 d?gitos e entre eles letras e n?meros.</string>
    <string name="lbl_nome">Nome</string>
    <string name="msg_diab_tico_contr">Diab?tico controlado?</string>
    <string name="msg_manchas_com_col">Manchas com colora??o marrom?</string>
    <string name="msg_l_nguas_com_pla">L?nguas com placas brancas/amarelas?</string>
    <string name="msg_probabilidade_d3">Probabilidade de 20%</string>
    <string name="lbl_email_atual">Email Atual</string>
    <string name="msg_probabilidade_d2">Probabilidade de 30%</string>
    <string name="lbl_fernanda_cabral">Fernanda Cabral</string>
    <string name="msg_pesquisar_patol">Pesquisar Patologias</string>
    <string name="lbl_amanda_viana">Amanda Viana</string>
    <string name="lbl_ol">Ol?!</string>
    <string name="lbl_20_anos">20 Anos</string>
    <string name="lbl_mucocele">MUCOCELE</string>
    <string name="lbl_j_lio_soares">J?lio Soares</string>
    <string name="lbl_cpf">CPF</string>
    <string name="msg_sente_dor_ao_ma">Sente dor ao mastigar?</string>
    <string name="msg_paciente_hipert">Paciente hipertenso?</string>
    <string name="lbl_afta">AFTA</string>
    <string name="lbl_nova_senha2">Nova senha</string>
    <string name="msg_a_mucocele_cost">A mucocele costuma desaparecer sem tratamento. No entanto, ocasionalmente, a remo??o da gl?ndula salivar pode ser necess?ria.</string>
    <string name="lbl_nome_atual">Nome Atual</string>
    <string name="msg_esta_ouvindo_es">Esta ouvindo estalos?</string>
    <string name="msg_as_mucoceles_co">As mucoceles costumam aparecer no interior do l?bio inferior. Normalmente, s?o indolores e claras ou azuladas. Os tamanhos variam.</string>
    <string name="msg_please_enter_valid_pa">Please enter valid password</string>
    <string name="msg_please_enter_valid_phone_nu">Please enter valid phone number</string>
    <string name="msg_please_enter_valid_email">Please enter valid email</string>
    <string name="msg_this_contact_has_no_phone_nu">This contact has no phone number</string>
    <string name="msg_camera_storage_permission">This Application need permission\n1.Camera permission to capture the image.\n2.Storage Access permission to save the captured image.</string>
    <string name="lbl_camera">Camera</string>
    <string name="lbl_gallery">Gallery</string>
</resources>
