<?xml version="1.0" encoding="UTF-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto" xmlns:tools="http://schemas.android.com/tools">
    <data>
        <variable name="pGinaMucoceleVM" type="com.oralhealthapplication.app.modules.pginamucocele.data.viewmodel.PGinaMucoceleVM"/>
    </data>
    <LinearLayout android:gravity="center_horizontal"
        android:id="@+id/linearPginaMucocele"
        android:layout_height="match_parent"
        android:layout_width="match_parent"
        android:orientation="vertical" style="@style/groupStylegreen_300">
        <FrameLayout android:gravity="start"
            android:id="@+id/frameMucocele"
            android:layout_height="@dimen/_403pxv"
            android:layout_width="match_parent" style="@style/groupStyle">
            <ImageView android:id="@+id/imageOqueemucocel"
                android:layout_gravity="start"
                android:layout_height="@dimen/_403pxh"
                android:layout_width="match_parent"
                android:scaleType="fitXY"
                cornerRadius="@{@dimen/_20pxh}"
                imageRes="@{@drawable/img_oqueemucocel_403x360}"
                tools:ignore="ContentDescription" tools:src="@drawable/img_oqueemucocel_403x360"/>
            <LinearLayout android:id="@+id/linearColumnstar"
                android:layout_gravity="center"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/_21pxv"
                android:layout_marginEnd="@dimen/_16pxh"
                android:layout_marginStart="@dimen/_16pxh"
                android:layout_marginTop="@dimen/_25pxv"
                android:layout_width="match_parent" android:orientation="vertical">
                <androidx.appcompat.widget.Toolbar
                    android:id="@+id/toolbarToolbar"
                    android:layout_height="wrap_content"
                    android:layout_width="match_parent" app:contentInsetStart="0dp">
                    <LinearLayout android:id="@+id/linearRowstar"
                        android:layout_height="wrap_content"
                        android:layout_width="match_parent" android:orientation="horizontal">
                        <ImageView android:id="@+id/imageStar"
                            android:layout_height="@dimen/_17pxh"
                            android:layout_marginBottom="@dimen/_24pxv"
                            android:layout_width="@dimen/_18pxh"
                            android:scaleType="fitXY"
                            android:src="@drawable/img_star"
                            tools:ignore="ContentDescription" tools:src="@drawable/img_star"/>
                        <ImageView android:id="@+id/imageClose"
                            android:layout_height="@dimen/_41pxh"
                            android:layout_marginStart="@dimen/_269pxh"
                            android:layout_width="@dimen/_41pxh"
                            android:scaleType="fitXY"
                            android:src="@drawable/img_close"
                            tools:ignore="ContentDescription" tools:src="@drawable/img_close"/>
                    </LinearLayout>
                </androidx.appcompat.widget.Toolbar>
                <FrameLayout android:id="@+id/frameStackmucocele"
                    android:layout_gravity="center_horizontal"
                    android:layout_height="@dimen/_69pxv"
                    android:layout_marginEnd="@dimen/_15pxh"
                    android:layout_marginStart="@dimen/_15pxh"
                    android:layout_marginTop="@dimen/_9pxv" android:layout_width="@dimen/_289pxh">
                    <TextView android:ellipsize="end"
                        android:gravity="top|start"
                        android:id="@+id/txtMUCOCELE"
                        android:layout_gravity="top|start"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="@dimen/_10pxv"
                        android:layout_width="match_parent"
                        android:singleLine="true"
                        android:text="@{pGinaMucoceleVM.pGinaMucoceleModel.txtMUCOCELE}"
                        style="@style/txtMontserratextrabold48" tools:text="@string/lbl_mucocele"/>
                    <TextView android:ellipsize="end"
                        android:id="@+id/txtCistoMucoso"
                        android:layout_gravity="bottom|start"
                        android:layout_height="wrap_content"
                        android:layout_marginEnd="@dimen/_10pxh"
                        android:layout_marginStart="@dimen/_3pxh"
                        android:layout_marginTop="@dimen/_10pxv"
                        android:layout_width="wrap_content"
                        android:singleLine="true"
                        android:text="@{pGinaMucoceleVM.pGinaMucoceleModel.txtCistoMucoso}"
                        style="@style/txtMontserratbold16_1" tools:text="@string/lbl_cisto_mucoso"/>
                </FrameLayout>
                <TextView android:id="@+id/txtUmcistonoca"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="@dimen/_10pxh"
                    android:layout_marginTop="@dimen/_199pxv"
                    android:layout_width="match_parent"
                    android:text="@{pGinaMucoceleVM.pGinaMucoceleModel.txtUmcistonoca}"
                    style="@style/txtMontserratbold16_2" tools:text="@string/msg_um_cisto_n_o_ca"/>
            </LinearLayout>
        </FrameLayout>
        <TextView android:ellipsize="end" android:id="@+id/txtVISOGERAL"
            android:layout_gravity="start"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/_15pxh"
            android:layout_marginStart="@dimen/_15pxh"
            android:layout_marginTop="@dimen/_18pxv"
            android:layout_width="wrap_content"
            android:singleLine="true"
            android:text="@{pGinaMucoceleVM.pGinaMucoceleModel.txtVISOGERAL}"
            style="@style/txtMontserratextrabold16" tools:text="@string/lbl_vis_o_geral"/>
        <TextView android:gravity="center_horizontal"
            android:id="@+id/txtDescription"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/_15pxh"
            android:layout_marginStart="@dimen/_15pxh"
            android:layout_marginTop="@dimen/_11pxv"
            android:layout_width="match_parent"
            android:text="@{pGinaMucoceleVM.pGinaMucoceleModel.txtDescription}"
            style="@style/txtMontserratmedium12" tools:text="@string/msg_mordida_no_l_bi"/>
        <TextView android:ellipsize="end" android:id="@+id/txtSINTOMAS"
            android:layout_gravity="start"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/_16pxh"
            android:layout_marginStart="@dimen/_16pxh"
            android:layout_marginTop="@dimen/_7pxv"
            android:layout_width="wrap_content"
            android:singleLine="true"
            android:text="@{pGinaMucoceleVM.pGinaMucoceleModel.txtSINTOMAS}"
            style="@style/txtMontserratextrabold16" tools:text="@string/lbl_sintomas"/>
        <TextView android:gravity="center_horizontal"
            android:id="@+id/txtDescriptionOne"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/_15pxh"
            android:layout_marginStart="@dimen/_15pxh"
            android:layout_marginTop="@dimen/_9pxv"
            android:layout_width="match_parent"
            android:text="@{pGinaMucoceleVM.pGinaMucoceleModel.txtDescriptionOne}"
            style="@style/txtMontserratmedium12" tools:text="@string/msg_as_mucoceles_co"/>
        <TextView android:ellipsize="end"
            android:id="@+id/txtTRATAMENTO"
            android:layout_gravity="start"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/_16pxh"
            android:layout_marginStart="@dimen/_16pxh"
            android:layout_marginTop="@dimen/_7pxv"
            android:layout_width="wrap_content"
            android:singleLine="true"
            android:text="@{pGinaMucoceleVM.pGinaMucoceleModel.txtTRATAMENTO}"
            style="@style/txtMontserratextrabold16" tools:text="@string/lbl_tratamento"/>
        <TextView android:gravity="center_horizontal"
            android:id="@+id/txtDescriptionTwo"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/_20pxv"
            android:layout_marginEnd="@dimen/_15pxh"
            android:layout_marginStart="@dimen/_15pxh"
            android:layout_marginTop="@dimen/_9pxv"
            android:layout_width="match_parent"
            android:text="@{pGinaMucoceleVM.pGinaMucoceleModel.txtDescriptionTwo}"
            style="@style/txtMontserratmedium12" tools:text="@string/msg_a_mucocele_cost"/>
    </LinearLayout>
</layout>
