<?xml version="1.0" encoding="UTF-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android" xmlns:tools="http://schemas.android.com/tools">
    <data>
        <variable name="listsentedoraomaRowModel" type="com.oralhealthapplication.app.modules.historicodequestionario.data.model.ListsentedoraomaRowModel"/>
    </data>
    <LinearLayout android:gravity="center_horizontal"
        android:id="@+id/linearQuestionrio"
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        android:orientation="vertical" style="@style/groupStylecornerRadius_4">
        <LinearLayout android:gravity="center_horizontal"
            android:id="@+id/linearColumnsentedoraoma"
            android:layout_height="match_parent"
            android:layout_marginTop="@dimen/_1pxv"
            android:layout_width="match_parent"
            android:orientation="vertical" style="@style/groupStylecornerRadius_4">
            <TextView android:ellipsize="end"
                android:gravity="center_horizontal"
                android:id="@+id/txtSentedoraoma"
                android:layout_height="wrap_content"
                android:layout_marginEnd="@dimen/_25pxh"
                android:layout_marginStart="@dimen/_25pxh"
                android:layout_width="match_parent"
                android:singleLine="true"
                android:text="@{listsentedoraomaRowModel.txtSentedoraoma}"
                style="@style/txtMontserratsemibold20" tools:text="@string/msg_sente_dor_ao_ma"/>
            <LinearLayout android:id="@+id/linearRowsim"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_23pxv"
                android:layout_width="match_parent"
                android:orientation="horizontal" style="@style/groupStylecornerRadius_4">
                <androidx.appcompat.widget.AppCompatButton
                    android:ellipsize="end" android:gravity="center"
                    android:id="@+id/btnSim"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.5"
                    android:layout_width="0dp"
                    android:paddingBottom="@dimen/_9pxv"
                    android:paddingEnd="@dimen/_30pxh"
                    android:paddingStart="@dimen/_30pxh"
                    android:paddingTop="@dimen/_9pxv"
                    android:singleLine="true"
                    android:text="@string/lbl_sim"
                    android:textAllCaps="false"
                    style="@style/btnSolidRounded" tools:text="@string/lbl_sim"/>
                <androidx.appcompat.widget.AppCompatButton
                    android:ellipsize="end" android:gravity="center"
                    android:id="@+id/btnNo"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/_36pxh"
                    android:layout_weight="0.5"
                    android:layout_width="0dp"
                    android:paddingBottom="@dimen/_9pxv"
                    android:paddingEnd="@dimen/_30pxh"
                    android:paddingStart="@dimen/_30pxh"
                    android:paddingTop="@dimen/_9pxv"
                    android:singleLine="true"
                    android:text="@string/lbl_n_o"
                    android:textAllCaps="false"
                    style="@style/btnSolidRounded_1" tools:text="@string/lbl_n_o"/>
            </LinearLayout>
        </LinearLayout>
    </LinearLayout>
</layout>
